--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,29 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+* {
+  box-sizing: border-box;
+}
 
+body {
   font-size: 24px;
   color: white;
   background-color: black;
+
+  height: 100vh;
+  min-width: fit-content;
+  min-height: fit-content;
+
+  margin: 0;
+  padding: 12px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+  min-width: fit-content;
+  min-height: fit-content;
 }
 
 #clocks {
@@ -17,7 +34,6 @@ body {
 
   width: 300px;
   min-width: fit-content;
-  max-width: 100%;
 
   .clock .time {
     justify-self: end;
