--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,18 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+  min-height: fit-content;
+}
+
 body {
   font-size: 24px;
   font-family: sans-serif;
   color: white;
   background-color: black;
 
-  height: 100vh;
+  height: 100%;
   min-width: fit-content;
   min-height: fit-content;
 
