--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,16 @@ body {
 }
 
 #connecting {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+
+  white-space: nowrap;
+}
+
+.fa-spinner {
+  font-size: 60px;
 }
 
 #content {
