--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html {
 body {
   font-size: 24px;
   font-family: sans-serif;
+  line-height: 30px;
 
   color: white;
   background-color: black;
@@ -104,6 +105,7 @@ body {
 button {
   font-size: inherit;
   font-family: inherit;
+  line-height: inherit;
 
   color: inherit;
   background: none;
@@ -133,6 +135,7 @@ button {
 input {
   font-size: inherit;
   font-family: inherit;
+  line-height: inherit;
 
   color: inherit;
   background: none;
@@ -159,7 +162,7 @@ input,
   border-radius: 6px;
   padding: 12px;
   margin: 0;
-  min-height: 136px;
+  min-height: 146px;
 }
 
 .time-input {
