--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,10 @@ input,
   display: flex;
   flex-direction: column;
   gap: 6px;
+
+  label {
+    align-self: center;
+  }
 }
 
 #player-input {
