--- a/styles.css
+++ b/styles.css
@@ -52,18 +52,18 @@ body {
   font-size: 60px;
 }
 
-#content {
+#clock-state {
   display: flex;
   flex-direction: column;
   gap: 36px;
+
+  min-width: 300px;
 }
 
-#clocks {
+.clocks {
   display: flex;
   flex-direction: column;
   gap: 24px;
-
-  min-width: 300px;
 }
 
 .clock {
